# rust-automata

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENCE  Makefile  README.md
.github/workflows/: tests.yml
examples/: Cargo.toml  README.md
examples/assets/: graphviz-header.html
examples/src/: circuit_breaker.rs  lib.rs  lock.rs  simple.rs  vikings.rs
rust-automata/: Cargo.toml
rust-automata-macros/: Cargo.toml  README.md
rust-automata-macros/src/: lib.rs  parser.rs
rust-automata-macros/src/annotations/: dot.rs  dsl.rs  mermaid.rs  mod.rs
rust-automata/src/: clock.rs  lib.rs  takeable.rs  timestamp.rs
rust-automata/tests/: README.md  example_tester.rs  fail_tester.rs
rust-automata/tests/asm/: flip_flop.expected_asm  flip_flop.rs
rust-automata/tests/fail/: handler_type_mismatch.rs  handler_type_mismatch.stderr  unknown_handler.rs  unknown_handler.stderr  unknown_input.rs  unknown_input.stderr  unknown_output.rs  unknown_output.stderr  unknown_state.rs  unknown_state.stderr
