[package]
name = "rust-automata"
description = "A framework and a DSL for building finite state machines in Rust"
repository = "https://github.com/michalsustr/rust-automata"
homepage = "https://github.com/michalsustr/rust-automata"
documentation = "https://docs.rs/rust-automata/"
readme = "../README.md"
license = "MIT"
categories = ["data-structures", "rust-patterns"]
keywords = ["fsm", "automata", "state", "machine"]
version = "0.0.3"
authors = ["Michal Sustr"]
edition = "2021"

[features]
default = ["dsl"]
mermaid = ["aquamarine", "rust-automata-macros/mermaid"]
dsl = ["rust-automata-macros/dsl"]

[dependencies]
aquamarine = { version = "0.6", optional = true }
rust-automata-macros = { path = "../rust-automata-macros", version = "0.0.3" }
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
log = "0.4"
env_logger = "0.11"

[dev-dependencies]                            
trybuild = "1.0"
cargo-asm = "0.1.16"
cargo-expand = "1.0.106"

[[bin]]
name = "flip_flop"
path = "tests/asm/flip_flop.rs"
